<?xml version="1.0" encoding="utf-8"?>
<com.example.simpletodoapp.search_history.ui.SearchBarWithHistoryLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/todo_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:reverseLayout="true"
        app:stackFromEnd="true"
        tools:listitem="@layout/view_holder_todo" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/navigate_todo_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/default_padding"
        android:contentDescription="Navigate to Todo add screen"
        app:backgroundTint="@color/purple_500"
        app:srcCompat="@drawable/ic_baseline_create_24"
        app:tint="@color/white"
        tools:ignore="HardcodedText" />

    <include
        android:id="@+id/search_history_section"
        layout="@layout/search_history_list" />

</com.example.simpletodoapp.search_history.ui.SearchBarWithHistoryLayout>