<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="8dp"
    app:contentPadding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/search_bar_edit_text"
            style="@style/SearchBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/search"
            android:imeOptions="actionSearch"
            android:importantForAutofill="no"
            tools:text="Search query text" />

        <ImageView
            android:id="@+id/search_bar_clear_button"
            style="@style/SearchBarButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="Clear button"
            android:src="@drawable/ic_baseline_clear_24"
            android:visibility="gone"
            tools:ignore="HardcodedText" />

        <ImageView
            android:id="@+id/search_bar_search_button"
            style="@style/SearchBarButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="Search button"
            android:src="@drawable/baseline_search_24"
            tools:ignore="HardcodedText" />

    </LinearLayout>

</androidx.cardview.widget.CardView>