<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone"
    tools:visibility="visible">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_history_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/search_history_recycler_view_height"
        android:background="@color/white"
        android:orientation="vertical"
        android:visibility="gone"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/view_holder_search_history"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/search_history_empty_text"
        style="@style/SearchHistoryText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/search_history_recycler_view_height"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/no_search_history"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/search_history_empty_space_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="search_history_empty_text,search_history_recycler_view" />

    <View
        android:id="@+id/search_history_empty_space"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/search_history_section_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_history_empty_space_barrier" />

</androidx.constraintlayout.widget.ConstraintLayout>